; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_pad.c_create_power_saving_task.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_pad.c_create_power_saving_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@power_saving_thread = common dso_local global i32 0, align 4
@ps_tsk_num = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"power_saving/%d\00", align 1
@ps_tsks = common dso_local global i64* null, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @create_power_saving_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_power_saving_task() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @power_saving_thread, align 4
  %3 = load i64, i64* @ps_tsk_num, align 8
  %4 = inttoptr i64 %3 to i8*
  %5 = load i64, i64* @ps_tsk_num, align 8
  %6 = call i64 @kthread_run(i32 %2, i8* %4, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = load i64*, i64** @ps_tsks, align 8
  %8 = load i64, i64* @ps_tsk_num, align 8
  %9 = getelementptr inbounds i64, i64* %7, i64 %8
  store i64 %6, i64* %9, align 8
  %10 = load i64*, i64** @ps_tsks, align 8
  %11 = load i64, i64* @ps_tsk_num, align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %0
  %16 = load i64, i64* @ps_tsk_num, align 8
  %17 = add i64 %16, 1
  store i64 %17, i64* @ps_tsk_num, align 8
  store i32 0, i32* %1, align 4
  br label %21

18:                                               ; preds = %0
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %18, %15
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i64 @kthread_run(i32, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
